fix horizontal scroll bug

--- a/site-frontend/src/components/main-menu/MainMenu.css
+++ b/site-frontend/src/components/main-menu/MainMenu.css
@@ -1,3 +1,7 @@
+.App nav ul {
+  box-sizing: border-box;
+}
+
 @media screen and (max-width: 800px) {
   .App nav ul {
     list-style-type: none;
